# livekit

./: .gitignore  .gitmodules  README.md  SConstruct
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
godot_project/: LiveKitVoiceChat.gd  Main.tscn  project.godot
godot_project/addons/livekit/: livekit.gdextension  plugin.cfg
include/: livekit_room.h  register_types.h
scripts/: build_android.sh
src/: livekit_room.cpp  register_types.cpp
